v0.0.1/modules/schema/pages/class/LoadResponseCharacteristic.adoc
= `LoadResponseCharacteristic`
:toclevels: 4


+++Models the characteristic response of the load demand due to changes in system conditions such as voltage and frequency. It is not related to demand response.
If LoadResponseCharacteristic.exponentModel is True, the exponential voltage or frequency dependent models are specified and used as to calculate active and reactive power components of the load model.
The equations to calculate active and reactive power components of the load model are internal to the power flow calculation, hence they use different quantities depending on the use case of the data exchange. 
The equations for exponential voltage dependent load model injected power are: 
pInjection= Pnominal* (Voltage/cim:BaseVoltage.nominalVoltage) ** cim:LoadResponseCharacteristic.pVoltageExponent
qInjection= Qnominal* (Voltage/cim:BaseVoltage.nominalVoltage) ** cim:LoadResponseCharacteristic.qVoltageExponent
Where: 
1) * means "multiply" and ** is "raised to power of";
2) Pnominal and Qnominal represent the active power and reactive power at nominal voltage as any load described by the voltage exponential model shall be given at nominal voltage.  This means that EnergyConsumer.p and EnergyConsumer.q  are at nominal voltage.
3) After power flow is solved: 
-pInjection and qInjection correspond to SvPowerflow.p and SvPowerflow.q respectively.  
- Voltage corresponds to SvVoltage.v at the TopologicalNode where the load is connected.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadResponseCharacteristic`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`LoadResponseCharacteristic`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LoadResponseCharacteristic {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EnergyConsumer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




LoadResponseCharacteristic -> EnergyConsumer: EnergyConsumer


LoadResponseCharacteristic -> DiagramObject: DiagramObjects


LoadResponseCharacteristic -> InstanceSet: InstanceSet


LoadResponseCharacteristic -> Name: Names


LoadResponseCharacteristic -> ChangeSetMember: PropertiesCIMDataObject


LoadResponseCharacteristic -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<exponentModel,`exponentModel`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Indicates the exponential voltage dependency model is to be used. If false, the coefficient model is to be used.
The exponential voltage dependency model consist of the attributes:
- pVoltageExponent
- qVoltageExponent
- pFrequencyExponent
- qFrequencyExponent.
The coefficient model consist of the attributes:
- pConstantImpedance
- pConstantCurrent
- pConstantPower
- qConstantImpedance
- qConstantCurrent
- qConstantPower.
The sum of pConstantImpedance, pConstantCurrent and pConstantPower shall equal 1.
The sum of qConstantImpedance, qConstantCurrent and qConstantPower shall equal 1.+++

| <<pConstantCurrent,`pConstantCurrent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Portion of active power load modelled as constant current.+++

| <<pConstantImpedance,`pConstantImpedance`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Portion of active power load modelled as constant impedance.+++

| <<pConstantPower,`pConstantPower`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Portion of active power load modelled as constant power.+++

| <<pFrequencyExponent,`pFrequencyExponent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exponent of per unit frequency effecting active power.+++

| <<pVoltageExponent,`pVoltageExponent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exponent of per unit voltage effecting real power.+++

| <<qConstantCurrent,`qConstantCurrent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Portion of reactive power load modelled as constant current.+++

| <<qConstantImpedance,`qConstantImpedance`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Portion of reactive power load modelled as constant impedance.+++

| <<qConstantPower,`qConstantPower`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Portion of reactive power load modelled as constant power.+++

| <<qFrequencyExponent,`qFrequencyExponent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exponent of per unit frequency effecting reactive power.+++

| <<qVoltageExponent,`qVoltageExponent`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exponent of per unit voltage effecting reactive power.+++

| <<EnergyConsumer,`EnergyConsumer`>>
| 0..*
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]
| +++The set of loads that have the response characteristics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EnergyConsumer]
=== `EnergyConsumer`
+++The set of loads that have the response characteristics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.EnergyConsumer`
| Cardinality
| 0..*
| Type
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]


|===

//[discrete]
[#exponentModel]
=== `exponentModel`
+++Indicates the exponential voltage dependency model is to be used. If false, the coefficient model is to be used.
The exponential voltage dependency model consist of the attributes:
- pVoltageExponent
- qVoltageExponent
- pFrequencyExponent
- qFrequencyExponent.
The coefficient model consist of the attributes:
- pConstantImpedance
- pConstantCurrent
- pConstantPower
- qConstantImpedance
- qConstantCurrent
- qConstantPower.
The sum of pConstantImpedance, pConstantCurrent and pConstantPower shall equal 1.
The sum of qConstantImpedance, qConstantCurrent and qConstantPower shall equal 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.exponentModel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pConstantCurrent]
=== `pConstantCurrent`
+++Portion of active power load modelled as constant current.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.pConstantCurrent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#pConstantImpedance]
=== `pConstantImpedance`
+++Portion of active power load modelled as constant impedance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.pConstantImpedance`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#pConstantPower]
=== `pConstantPower`
+++Portion of active power load modelled as constant power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.pConstantPower`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#pFrequencyExponent]
=== `pFrequencyExponent`
+++Exponent of per unit frequency effecting active power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.pFrequencyExponent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pVoltageExponent]
=== `pVoltageExponent`
+++Exponent of per unit voltage effecting real power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.pVoltageExponent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#qConstantCurrent]
=== `qConstantCurrent`
+++Portion of reactive power load modelled as constant current.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.qConstantCurrent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#qConstantImpedance]
=== `qConstantImpedance`
+++Portion of reactive power load modelled as constant impedance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.qConstantImpedance`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#qConstantPower]
=== `qConstantPower`
+++Portion of reactive power load modelled as constant power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.qConstantPower`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#qFrequencyExponent]
=== `qFrequencyExponent`
+++Exponent of per unit frequency effecting reactive power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.qFrequencyExponent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#qVoltageExponent]
=== `qVoltageExponent`
+++Exponent of per unit voltage effecting reactive power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadResponseCharacteristic.qVoltageExponent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


